[package]
name = "daybreak"
version = "0.1.0"
edition = "2018"

[dependencies]
glow = "0.13.0"
prokio = "0.1.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.29.1", optional = true }
rodio = "0.17.3"
winit = "0.29.3"
instant = { version = "0.1" }
tokio = { version = "1.33.0", features = ["sync", "macros"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "WebGl2RenderingContext", "Window", "console", "HtmlAudioElement"] }
wasm-bindgen = { version = "0.2" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
